tests/ui/resolve/path-attr-in-const-block.stderr
error: cannot find macro `foo` in the crate root
  --> $DIR/path-attr-in-const-block.rs:6:19
   |
LL |         #![path = foo!()]
   |                   ^^^ not found in the crate root

error: aborting due to 1 previous error

